Add aggressive cache bust notice for settings update

--- a/mobile/4-Market/market.html
+++ b/mobile/4-Market/market.html
@@ -539,6 +539,8 @@ a[href="/BeeMazing-A1/mobile/4-Market/market.html"] svg {
 </head>
 <body>
     <div class="date-header">
+        <h1 style="color: white; font-size: 50px; text-align: center; background: red; padding: 30px; border: 15px solid blue; animation: flash 0.5s infinite; text-shadow: 5px 5px 10px black;">AGGRESSIVE CACHE BUST v7 - SETTINGS UPDATED - RELOAD NOW!</h1>
+        <style>@keyframes flash { 0% { background: red; } 25% { background: green; } 50% { background: blue; } 75% { background: orange; } 100% { background: red; } }</style>
 
         <div id="profileIcon" class="profile-icon">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
