--- a/mobile/4-Market/market.html
+++ b/mobile/4-Market/market.html
@@ -539,8 +539,8 @@ a[href="/BeeMazing-A1/mobile/4-Market/market.html"] svg {
 </head>
 <body>
     <div class="date-header">
-        <h1 style="color: red; font-size: 70px; text-align: center; background: lime; padding: 50px; border: 25px solid orange; animation: spin 0.2s infinite; text-shadow: 15px 15px 30px black;">FINAL CLEAN v1000 - ALL DEBUGGING REMOVED!</h1>
-        <style>@keyframes spin { 0% { transform: rotate(0deg) scale(1); } 25% { transform: rotate(90deg) scale(1.2); } 50% { transform: rotate(180deg) scale(0.8); } 75% { transform: rotate(270deg) scale(1.5); } 100% { transform: rotate(360deg) scale(1); } }</style>
+        <h1 style="color: white; font-size: 80px; text-align: center; background: black; padding: 60px; border: 30px solid cyan; animation: ultimate 0.1s infinite; text-shadow: 20px 20px 40px red; transform: rotate(10deg);">ULTIMATE CACHE DESTROYER v2000 - FILE REPLACED!</h1>
+        <style>@keyframes ultimate { 0% { background: black; color: white; transform: rotate(0deg) scale(1); } 10% { background: red; color: yellow; transform: rotate(36deg) scale(1.5); } 20% { background: blue; color: white; transform: rotate(72deg) scale(0.5); } 30% { background: green; color: black; transform: rotate(108deg) scale(2); } 40% { background: purple; color: white; transform: rotate(144deg) scale(0.8); } 50% { background: orange; color: blue; transform: rotate(180deg) scale(1.3); } 60% { background: yellow; color: red; transform: rotate(216deg) scale(0.7); } 70% { background: pink; color: green; transform: rotate(252deg) scale(1.8); } 80% { background: cyan; color: black; transform: rotate(288deg) scale(0.6); } 90% { background: lime; color: purple; transform: rotate(324deg) scale(1.4); } 100% { background: black; color: white; transform: rotate(360deg) scale(1); } }</style>
         
         <div id="profileIcon" class="profile-icon">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
